--- a/CA3/Pages/SteamGames.razor
+++ b/CA3/Pages/SteamGames.razor
@@ -102,13 +102,16 @@
 <PageTitle>Games</PageTitle>
 
 <main>
+    <!--Top row, containing the page Title, and search input-field-->
     <div class="top-row">
         <h1>Steam Store Games</h1>
         <input id="text-input-box" type="text" @bind="title" @oninput="OnTitleChanged" />
         <p>Press enter then any button</p>
     </div>
+    <!--If data gets returned from the API, print Game cards to the screen-->
     @if (data != null)
     {
+        <!--If the length of the data array is 0, print a message, else print game cards to the screen-->
         @if (data.Length == 0)
         {
             <p id="no-data">Use the search box to search for Steam Games</p>
@@ -116,16 +119,19 @@
         else
         {
             <div class="options">
+                <!--Sorting options, for sorting returned games by Ascending, or Descending order-->
                 <div class="sorting-options">
                     <a class="button" id="option-asc" @onclick="SortAscending">Asc</a>
                     <a class="button" id="option-desc" @onclick="SortDescending">Desc</a>
                 </div>
+                <!--price options, which allow the user to calculate the difference between min and max game prices-->
                 <div class="price-options">
                     <a id="calc-diff" @onclick="@GetPriceDifference" class="button">Calc Diff</a>
                     <p id="price-diff-output">@priceDifference</p>
                 </div>
             </div>
             <div class="container">
+                <!--For each element in the data array, print a card to the screen with that games' information-->
                 @foreach (var game in data)
                 {
                     @if (game.SteamAppId != null)
@@ -152,6 +158,7 @@
     private Game[] data;
     double priceDifference;
 
+    // OnInitializedAsync() function which runs on initial loading of the application.
     protected override async Task OnInitializedAsync()
     {
         try
@@ -165,6 +172,8 @@
         }
     }
 
+    // OnTitleChanged() function which runs when a user submits input into the text-input box.
+    // Calls the API with the given title, which corresponds to what the user enters in the input box.
     private async Task OnTitleChanged()
     {
         try
@@ -178,6 +187,8 @@
         }
     }
 
+    // Custom Icomparer class 'GameAscendingComparer' which takes two Game objects, and parses the 'Cheapest' member variable
+    // into a Double. The values are compared and the higher value gets returned, to allow for Ascending Sort.
     public class GameAscendingComparer : IComparer<Game>
     {
         public int Compare(Game x, Game y)
@@ -189,6 +200,8 @@
         }
     }
 
+    // Custom Icomparer class 'GameDescendingComparer' which takes two Game objects, and parses the 'Cheapest' member variable
+    // into a Double. The values are compared and the lower value gets returned, to allow for Descending Sort.
     public class GameDescendingComparer : IComparer<Game>
     {
         public int Compare(Game x, Game y)
@@ -200,6 +213,8 @@
         }
     }
 
+    // SortAscending() and SortDescending methods, which sort the array 'data' containing Game objects, in either Ascending
+    // or Descending order.
     public void SortAscending()
     {
         Array.Sort(data, new GameAscendingComparer());
@@ -209,6 +224,9 @@
         Array.Sort(data, new GameDescendingComparer());
     }
 
+    // GetPriceDifference() methods which takes the 'Cheapest' member variables, and parses them into an array of Doubles
+    // The min and max is then retrieved from that array, and the difference is assigned to the priceDifference variable,
+    // which corresponds to an output on the webpage
     public void GetPriceDifference()
     {
         double[] cheapestValues = data.Select(v => double.Parse(v.Cheapest)).ToArray();
